# ECE480Team4

./: .bashrc  .gitignore  .rosinit  Nomachine setup  README-NOMACHINE  README.md  TF  frames_2026-03-30_21.30.18.gv  frames_2026-04-12_21.22.22.gv  frames_2026-04-12_21.23.46.gv  frames_2026-04-12_21.27.53.gv  frames_2026-04-12_21.34.15.gv  frames_2026-04-16_19.31.36.gv  id_ed25519
NX/: nxserver
cartographer_config/: my_cartographer.lua  my_robot.lua
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_ws/: frames_2026-03-17_19.39.03.gv  frames_2026-03-17_19.42.52.gv  frames_2026-03-17_19.48.44.gv  frames_2026-03-17_19.49.16.gv  frames_2026-03-17_19.54.32.gv  pid_params.txt
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/Curve_detection_turnsbaseoncamera/: curve_detect_turns.py
ros2_ws/src/bot_slam/: my_cartographer.lua  package.xml  setup.cfg  setup.py
ros2_ws/src/curvy_road/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/gazebo_world/: CMakeLists.txt
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/lane_follow/: package.xml  pid_params.txt  pp_params.txt  setup.cfg  setup.py
ros2_ws/src/perception_ml_node/: .gitignore  package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/src/perception_ml_node/perception_ml_node/launch/: yolopv2_demo.launch.py
ros2_ws/src/perception_ml_node/perception_ml_node/scripts/: get_weights.sh
ros2_ws/src/perception_ml_node/scripts/: run_yolopv2_demo.py
ros2_ws/src/perception_sync_node/: package.xml  perception_sync_node.py  setup.cfg  setup.py
ros2_ws/src/sensors_lidar_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/sensors_lidar_bridge/launch/: lidar.launch.py  lidar_mapping.launch.py
ros2_ws/src/sensors_lidar_bridge/sensors_lidar_bridge/: scan_to_pc2.py  sensors_lidar_bridge.py
(+729 files in other folders)
