<?xml version="1.0"?>
<package format="3">
  <name>sensors_lidar_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 LiDAR bridge (bridge/serial/sim) → /lidar/scan_raw and /sync/lidar</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
